Código sem comitar

--- a/ControleDeContatos/appsettings.json
+++ b/ControleDeContatos/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": { "DefaultConnection": "Server=.\\;Database=DB_SistemaContatos;Trusted_Connection=Yes;TrustServerCertificate=True;" },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
